Final version before pages all changed to mobile use. Called Version 2.1.2.7. New version will be 2.1.3.0

--- a/MobileSite.Master
+++ b/MobileSite.Master
@@ -83,10 +83,9 @@
                     <li><asp:HyperLink ID="hlHome" NavigateUrl="~/Default.aspx" Text="🏠 Home" runat="server" /></li>
                     <li><asp:HyperLink ID="hlDeliveries" NavigateUrl="~/Pages/DeliverySheet.aspx" Text="🚚 Deliveries" runat="server" /></li>
                     <li><asp:HyperLink ID="hlRepairs" NavigateUrl="~/Pages/Repairs.aspx" Text="🔧 Repairs" runat="server" /></li>
-                    <li><asp:HyperLink ID="hlOrders" NavigateUrl="~/Pages/Orders.aspx" Text="📋 Orders" runat="server" /></li>
+                    <li><asp:HyperLink ID="hlOrders" NavigateUrl="~/Pages/NewOrderDetail.aspx" Text="📋 New Order" runat="server" /></li>
                     <li><asp:HyperLink ID="hlCustomers" NavigateUrl="~/Pages/Customers.aspx" Text="👥 Customers" runat="server" /></li>
-                    <li><asp:HyperLink ID="hlReports" NavigateUrl="~/Pages/Reports.aspx" Text="📊 Reports" runat="server" /></li>
-                    <li><asp:HyperLink ID="hlAdmin" NavigateUrl="~/Pages/Admin.aspx" Text="⚙️ Admin" runat="server" /></li>
+                    <li><asp:HyperLink ID="hlLookups" NavigateUrl="~/Pages/Lookups.aspx" Text="📊 Lookup Tables" runat="server" /></li>
                 </ul>
             </nav>
         </div>
